fix(home): reduce excessive spacing between image and text (#2)
- Decreased margin between hero image and text section

--- a/pages/2-home/home.css
+++ b/pages/2-home/home.css
@@ -231,7 +231,7 @@
 
     .avatarImage img {
         width: 27em;
-        margin: -10em 15em 0 0;
+        margin: -10em 20em 0 0;
     }
 
     .typingEffect {
